# gilbert-plugins

./: CLAUDE.md  README.md
.claude/memory/: MEMORIES.md  memory-browser-plugin.md  memory-guess-that-song.md
american-standard/: __init__.py  nexia_backend.py  plugin.py  plugin.yaml  pyproject.toml
american-standard/tests/: conftest.py  test_nexia_backend.py
andon-fm/: README.md  andon_fm_service.py  plugin.py  plugin.yaml  pyproject.toml  scraper.py  stations.py
andon-fm/frontend/: AndonFmPage.tsx  api.ts  package.json  panels.ts  types.ts
andon-fm/tests/: conftest.py  test_scraper.py  test_service.py  test_stations.py
anthropic/: anthropic_ai.py  anthropic_vision.py  shared_key.py
anthropic/tests/: conftest.py  test_anthropic_ai.py  test_anthropic_vision_prompt.py  test_shared_key.py
apple-health/: __init__.py  apple_health_backend.py  plugin.py  plugin.yaml  pyproject.toml
apple-health/frontend/: AppleHealthPanel.tsx  package.json  panels.ts
bedrock/: bedrock_ai.py
browser/: browser_service.py  container.py  context_pool.py  credentials.py  login_runner.py  plugin.py  plugin.yaml  pyproject.toml  tools.py  vnc.py
browser/docker/: Dockerfile
code-conduit/: claude_code_backend.py  code_conduit_service.py  opencode_backend.py  plugin.py  plugin.yaml  pyproject.toml
code-conduit/frontend/: CodingPage.tsx  api.ts  package.json  panels.ts  types.ts
code-conduit/tests/: conftest.py  test_code_conduit_service.py  test_opencode_backend.py  test_phase3.py
deepgram/: deepgram.py  plugin.py  plugin.yaml  pyproject.toml
discord-webhook/: __init__.py  discord_webhook_push.py  plugin.py  plugin.yaml  pyproject.toml
elevenlabs/: elevenlabs_scribe.py  elevenlabs_tts.py  plugin.py  plugin.yaml  pyproject.toml
elevenlabs/tests/: conftest.py  test_elevenlabs_scribe.py  test_elevenlabs_streaming.py  test_elevenlabs_tts.py
frigate/: __init__.py  backend.py  http_client.py  mqtt_client.py  plugin.py  plugin.yaml  pyproject.toml
frigate/frontend/: CameraCard.tsx  CamerasPage.tsx  EventList.tsx  MuteDrawer.tsx  RecentEventsCard.tsx  api.ts  package.json  panels.ts  types.ts
frigate/tests/: conftest.py  test_event_normalization.py  test_frigate_backend.py  test_frigate_mqtt.py
google/: _google_retry.py  gdrive_documents.py  gmail.py  google_calendar.py  google_credentials.py  google_directory.py  google_tasks.py  plugin.py  plugin.yaml  pyproject.toml
google/tests/: conftest.py  test_gmail_backend.py  test_google_calendar.py  test_google_credentials.py  test_google_tasks.py
groq/: groq_whisper.py  plugin.py  plugin.yaml
guess-that-song/: service.py
hk-webhook/: __init__.py  hk_webhook_backend.py  plugin.py  plugin.yaml  pyproject.toml
jellyfin/: README.md  __init__.py  jellyfin_backend.py  plugin.py  plugin.yaml  pyproject.toml
jellyfin/scripts/: capture_jellyfin_fixtures.py
jellyfin/tests/: conftest.py  test_jellyfin_backend.py
jellyfin/tests/fixtures/jellyfin/: episode.json  movie.json  movie_non_utc.json  season.json  sessions_list.json  show.json  track.json
kokoro/: kokoro_tts.py  plugin.py  plugin.yaml  pyproject.toml
lutron-radiora/: __init__.py  bridge.py  lutron_lights.py  lutron_shades.py  plugin.py  plugin.yaml  pyproject.toml
mentra/: camera_tool.py  mentra_service.py  plugin.py  plugin.yaml  pyproject.toml  voice_session.py
mentra/frontend/: MentraPage.tsx  api.ts  package.json  panels.ts  types.ts
mentra/protocol/: __init__.py  frames.py  layouts.py  message_types.py  streams.py
mentra/session/: __init__.py  session.py  transport.py
mentra/session/managers/: __init__.py  base.py  button.py  camera.py  dashboard.py  display.py  led.py  location.py  mic.py  speaker.py  transcription.py
mentra/tests/: conftest.py  test_camera_tool.py  test_managers_extended.py  test_mentra_service.py  test_protocol.py  test_session.py  test_ws_handlers.py
messaging/: messaging_service.py  plugin.py  plugin.yaml  pyproject.toml
messaging/frontend/: MessagingPage.tsx  package.json  panels.ts  types.ts  useMessaging.ts
messaging/tests/: conftest.py  test_messaging_service.py
ngrok/: ngrok_tunnel.py
ntfy/: ntfy_push.py  plugin.py  plugin.yaml  pyproject.toml
open-meteo/: __init__.py  open_meteo_weather.py  plugin.py  plugin.yaml  pyproject.toml  weather_codes.py
openai/: openai_whisper.py  plugin.py  plugin.yaml
openai-compatible/: __init__.py  openai_compatible_ai.py  plugin.py  plugin.yaml  pyproject.toml
openai-compatible/tests/: conftest.py  test_openai_compatible_ai.py
openwakeword/: oww_backend.py  plugin.py  plugin.yaml  pyproject.toml
phone/: phone_call.py  plugin.py  plugin.yaml  pyproject.toml
phone/frontend/: PhoneCallsPage.tsx  package.json  panels.ts  types.ts  usePhoneCalls.ts
phone/tests/: conftest.py  test_phone_call_service.py
plex/: README.md  __init__.py  plex_backend.py  plugin.py  plugin.yaml  pyproject.toml
plex/scripts/: capture_plex_fixtures.py
plex/tests/: conftest.py  test_plex_backend.py
plex/tests/fixtures/plex/: album.xml  artist.xml  episode.xml  movie.xml  movie_non_utc.xml  season.xml  show.xml  track.xml
porcupine/: plugin.py  plugin.yaml  porcupine.py  pyproject.toml
pushover/: plugin.py  plugin.yaml  pushover_push.py  pyproject.toml
sonos/: sonos_music.py  sonos_smapi.py  sonos_speaker.py
telegram/: plugin.py  plugin.yaml  pyproject.toml  telegram_push.py
telnyx/: plugin.py  plugin.yaml  pyproject.toml  telnyx_messaging.py  telnyx_telephony.py
telnyx/tests/: conftest.py  test_telnyx_messaging.py  test_telnyx_telephony.py
tesseract/: plugin.py
unifi/: access.py  client.py  doorbell.py  network.py  presence.py  protect.py
voice-agent/: plugin.py  plugin.yaml  pyproject.toml  voice_agent_service.py
voice-agent/frontend/: LiveConversationsPage.tsx  VoiceAgentPage.tsx  package.json  panels.ts
voice-agent/tests/: conftest.py  test_voice_agent_service.py
withings/: __init__.py  plugin.py  plugin.yaml  pyproject.toml  withings_backend.py
withings/frontend/: WithingsPanel.tsx  package.json  panels.ts
withings/tests/: conftest.py  test_withings_backend.py
(+66 files in other folders)
