[project]
name = "gilbert-plugin-jellyfin"
version = "1.0.0"
description = "Jellyfin Media Server library + playback backend for Gilbert"
requires-python = ">=3.12"
dependencies = [
    # We talk to Jellyfin's REST API directly via httpx — the official
    # ``jellyfin-apiclient-python`` is partially synchronous and missing
    # some endpoints we need (Sessions remote control). REST is well
    # documented and stable.
    "httpx>=0.27.0",
]

[tool.uv]
package = false
